--- a/backend/public/variables.css
+++ b/backend/public/variables.css
@@ -3,5 +3,5 @@
     --header-text:#ffffff;
     --header-bg: #124076;
     --border-clr:#EEEEEE;
-    --btn-bg: #61677A;
+    --btn-bg: #40679E;
   }
