--- a/backend/views/create.ejs
+++ b/backend/views/create.ejs
@@ -15,12 +15,12 @@
     <main class="main set-padding">
         <form action="/create-file" method="POST" class="create-form">
             <div class="form-group">
-                <label for="create-form-name">File Name:</label>
-                <input type="text" id="create-form-name" name="name" value="<%= fileName %>">
+                <label for="createFormName">File Name:</label>
+                <input type="text" id="createFormName" name="name" value="<%= fileName %>">
             </div>
             <div class="form-group">
-                <label for="create-form-content">Content:</label>
-                <textarea name="content" id="content" name="create-form-content" cols="50" rows="20"></textarea>
+                <label for="createFormContent">Content:</label>
+                <textarea name="content" id="content" name="createFormContent" cols="50" rows="20"></textarea>
             </div>
             <button type="submit" class="user-action-button">Submit</button>
         </form>
