--- a/backend/views/partials/header.ejs
+++ b/backend/views/partials/header.ejs
@@ -3,7 +3,9 @@
         <h1 class="home"><a href="/">File Management System</a></h1>
         <div class="nav-links">
             <a href="#" class="nav-link">About</span></a>
-            <a href="#" class="nav-link" id="favourites-link">Files</span></a>
+            <a href="#" class="nav-link" id="favourites-link">Pricing</span></a>
+            <a href="#" class="nav-link" id="favourites-link">Contact us</span></a>
+            <a href="#" class="nav-link" id="favourites-link">Sign up</span></a>
         </div>
     </nav>
 </header>
