--- a/backend/views/detail.ejs
+++ b/backend/views/detail.ejs
@@ -17,9 +17,20 @@
         <h1>File Name: <span class="file-name"><%= name %></span> </h1>
         <p class="file-content"><%= content %></p>
         <section class="user-actions">
-            <a href="/update-file/<%= name %>" class="user-action-button">Update</a>
+            <a href="<%= name %>" class="user-action-button" id="showForm">Update file name</a>
             <a href="/delete-file/<%= name %>" class="user-action-button">Delete</a>
         </section>
+        <section class="update-form">
+            <form method="post" id="updateForm">
+                <div class="form-group">
+                    <input type="hidden" id="currentName" name="currentName" value="<%= name %>">
+                    <label for="updateFormName">New file name:</label>
+                    <input type="text" id="updateFormName" name="name" value="<%= name %>">
+                    <button type="submit" class="update-button" onclick="updateFileName()">Submit</button>
+                </div>
+            </form>
+        </section>
     </main>
+    <script src="/scripts.js"></script>
 </body>
 </html>
